generate-train-algo-enemy/errorFile122-02-2020-02-16-24-1582355784623--1681861450.txt
  File "/home/yuntian/Dropbox/Terminal/yuntian/C1GamesStarterKit/generate-train-algo/algo_strategy.py", line 38
    global NEED_DUMP = True
                     ^
SyntaxError: invalid syntax
